# mu-icp

./: Cargo.toml  Makefile  README.md  dfx.json
.github/workflows/: rust.yml
e2e-tests/: Cargo.toml  build.rs
e2e-tests/src/: lib.rs  mu_smart_contract_test.rs  setup.rs
e2e-tests/src/canisters/: ledger_canister.rs  mod.rs  mu_smart_contract.rs
nns-modules/: ledger.wasm
scripts/: install-dependencies.sh
src/mu-smart-contract-backend/: Cargo.toml
src/mu_smart_contract/: Cargo.toml  README.md  build.rs  mu_smart_contract.did
src/mu_smart_contract/src/: app.rs  developer.rs  error.rs  lib.rs  memory.rs  settings.rs  utils.rs
src/mu_smart_contract/src/utils/: exchange.rs
