[workspace]
members = [
    "e2e-tests",
    "src/mu_smart_contract"
]
resolver = "2"
package.rust-version = "1.76.0"

[profile.canister-release]
inherits = "release"
debug = false
panic = "abort"
lto = true
opt-level = 'z'

[workspace.dependencies]
futures = "0.3"
candid = "0.10"
ic-cdk = "0.13"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11.14"
ic-cdk-bindgen = "0.1.3"
ic-ledger-types = "0.10.0"
