[package]
name = "e2e-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
ic-ledger-types.workspace = true
serde_bytes.workspace = true
futures.workspace = true
serde.workspace = true
rand = "0.8.5"
pocket-ic = "3.0"

[build-dependencies]
ic-cdk-bindgen.workspace = true
